- Fix bug #37212 (Access to protected property of common base class)   By adding "zend_class_entry *ce" to struct zend_property_info; # Besides closing the bug this patch allows to optimize a bunch of # property handling optimizations. I need to find out what all can be # optimized. All other tests relevant to class handling still PASS.